Fix thumbnails and tagcloud overflow

--- a/public/css/app.less
+++ b/public/css/app.less
@@ -320,6 +320,10 @@ body.monument-map .background {
     display: none;
 }
 
+.tagcloud {
+    overflow:hidden;
+}
+
 /**
  * Fixes Google Maps controls
  * @see http://stackoverflow.com/questions/7471830/google-maps-api-v3-weird-ui-display-glitches-with-screenshot
